# SmartRent-MCP

./: .gitignore  ARIA_CONCISE_CONTEXT.md  LICENSE  README.md  SMARTRENT_METHODS.txt  pyproject.toml  requirements.txt  server.json  server.py  test_smartrent.py
tools/: devices.py
